--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,26 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="divider_gray">#1f000000</color>
+
+
+    <color name="pink_pressed">#ec407a</color>
+
+    <color name="colorSliderBackground">#FF181821</color>
+    <color name="colorSwitchColor">#FF2371FA</color>
+    <color name="colorTextColor">#FFFFFFFF</color>
+
+
+
+    <color name="primary_color">#e91e63</color>
+    <color name="secondary_color">#FF2371FA</color>
+
+
+    <color name="black_semi_transparent">#B2000000</color>
+    <color name="background">#e5e5e5</color>
+    <color name="half_black">#808080</color>
+    <color name="white">#fafafa</color>
+    <color name="white_pressed">#f1f1f1</color>
+    <color name="pink">#e91e63</color>
+    <color name="blue_semi_transparent">#805677fc</color>
+    <color name="blue_semi_transparent_pressed">#80738ffe</color>
 </resources>
