--- a/app/src/main/res/layout/widget_layout.xml
+++ b/app/src/main/res/layout/widget_layout.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+android:id="@+id/mLayout"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:background="#ff000000"
+android:gravity="center"
+android:orientation="vertical"
+android:padding="10dp" >
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <item>
+        <bitmap
+            android:gravity="center"
+            android:src="@mipmap/ic_flash_on"/>
+    </item>
 
 </LinearLayout>
