--- a/app/src/main/res/layout/camera_activity.xml
+++ b/app/src/main/res/layout/camera_activity.xml
@@ -4,6 +4,7 @@
     xmlns:tools = "http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:id = "@+id/acv_main"
     android:layout_width = "match_parent"
     android:layout_height = "match_parent"
@@ -108,6 +109,16 @@
         android:layout_below="@+id/shine_button"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="45dp" />
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id_choice">
+    </com.google.android.gms.ads.AdView>
 
 
 
