--- a/app/src/main/res/layout/camera_activity.xml
+++ b/app/src/main/res/layout/camera_activity.xml
@@ -94,11 +94,12 @@
     <ImageButton
         android:layout_width="250dp"
         android:layout_height="250dp"
+        android:scaleType="fitXY"
         android:layout_centerInParent="true"
         android:background="@android:color/transparent"
         android:id="@+id/image_button"
         android:padding="0dp"
-        android:src="@drawable/ic_flash_off_black"/>
+        android:src="@drawable/ic_flash_off_black" />
 
 
     <!--<io.ghyeok.stickyswitch.widget.StickySwitch
